base/kyverno-policies-audit/require-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-limits
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-cpu-memory-limits
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "CPU and memory limits are required."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
            =(initContainers):
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
